article screen bug on mobile (bg)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -605,6 +605,7 @@ body{
   }
   .articles-screen{
     padding: 88px 0 0;
+    margin-top: -1px;
   }
   .article-slider{
     flex-direction: column;
